Fixes text overlap bug

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -1679,7 +1679,7 @@ main {
     background-image: none;
     border: 0;
     border-bottom: color('red-warm-50v') solid 20px;
-    border-left: color('red-warm-50v') solid 20px;
+    border-left: color('red-warm-50v') solid 13px;
   }
 }
 
